# spark

./: DOCUMENTATION.md
spark_stage_2_ur/: ARDUINO_CONTROLLER.md  CMakeLists.txt  package.xml
spark_stage_2_ur/arduino/finalwithresponse/sketch_nov11e/: sketch_nov11e.ino
spark_stage_2_ur/arduino/finalwitoutresponse/: finalwitoutresponse.ino
spark_stage_2_ur/arduino/sketch_nov7b/: sketch_nov7b.ino
spark_stage_2_ur/config/: connector_poses.yaml  moveit_params.yaml
spark_stage_2_ur/examples/: connector_usage_examples.cpp  move_to_joints_example.cpp  move_to_joints_example.py
spark_stage_2_ur/include/spark_stage_2_ur/: connector_position.hpp
spark_stage_2_ur/launch/: arduino_controller.launch.py  binpick.txt  bringup_moveit_and_node.launch.py  connector_pose_gui.launch.py  move.launch.py  move_to_pose_node.launch.py  move_to_pose_with_move_group.launch.py
spark_stage_2_ur/src/: Arduino_controller_node.cpp  arduino_service_client.py  bin_pick_node.cpp  connector_pose_gui.py  connector_posistion.cpp  joint_state_remapper.cpp  move_to_pose_node.cpp  test.cpp  tf_pose_saver_node.cpp  ur_pose_planner_node.cpp
spark_stage_2_ur/srv/: ArduinoCommand.srv  ConnectorSequence.srv  MoveLinearQuat.srv  MoveLinearRPY.srv  MoveToJoints.srv  MoveToPose.srv
spark_state_machine/: ard.txt  package.xml  setup.cfg  setup.py
spark_state_machine/arduino/: sketch_jul20a.ino
spark_state_machine/spark_state_machine/: dh_gripper_node.py  gripper_controller_node.py  gripper_stress_tester.py  plain detection.py  wire_tip_detection.py  wire_tip_detection_test.py
spark_state_machine/spark_state_machine/msg/: GripperStatus.msg
spark_state_machine/spark_state_machine/srv/: MoveGripper.srv
spark_state_machine_interfaces/: CMakeLists.txt  README.md  package.xml
spark_state_machine_interfaces/msg/: GripperStatus.msg
ur10_e_moveit_config/: CMakeLists.txt  README.md  package.xml
ur10_e_moveit_config/cmake/: ur_moveit_configConfig.cmake
ur10_e_moveit_config/config/ur10e/: visual_parameters.yaml
ur10_e_moveit_config/launch/: move_group.launch.py  ur_driver_moveit.launch.py
ur10_e_moveit_config/srdf/: ur.srdf.xacro  ur10e.srdf
ur10_e_moveit_config/urdf/: ur10e.urdf.xacro  ur_macro.xacro
