<?xml version="1.0"?>
<package format="3">
  <name>spark_state_machine_interfaces</name>
  <version>0.0.0</version>
  <description>Interfaces (msg/srv) for spark_state_machine</description>
  <maintainer email="2022ume1557@mnit.ac.in">divyansh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
